--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,15 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://flowstate.rehanbutt.com" # the base hostname & protocol for your site
 
-twitter_username: jekyllrb
-github_username:  jekyll
-
 # Build settings
 markdown: kramdown
+
+sass:
+  style: compressed
+
+plugins: [jekyll-sitemap]
+
+collections:
+  workflows:
+    output: true
+    permalink: /workflow/:path
