Reference name corrected

--- a/_data/apps.yml
+++ b/_data/apps.yml
@@ -1,8 +1,8 @@
 agenda:
-  name: agenda
+  name: Agenda
   icon: "agenda-460x0w.webp"
   brand-color: FFAA01
-apple news:
-  name: apple-news
+apple-news:
+  name: Apple News
   icon: "apple-news-460x0w.webp"
   brand-color: f84969
