--- a/_data/apps.yml
+++ b/_data/apps.yml
@@ -38,3 +38,7 @@ hulu:
   name: Hulu
   icon: 'hulu-460x0w.png'
   brand-color: 1ce783
+apple-music:
+  name: Apple Music
+  icon: 'apple-music-460x0w.png'
+  brand-color: fc3c44
