--- a/_data/apps.yml
+++ b/_data/apps.yml
@@ -158,3 +158,7 @@ arena:
   name: Are.na
   icon: 'arena-icon.jpg'
   brand-color: 000000
+uxdx:
+  name: UXDX
+  icon: 'uxdx-icon.jpg'
+  brand-color: 2C5ACE
